# contimod_graphene

./: .gitignore  AGENTS.md  LICENSE  PHYSICS_VALIDATION_PLAN.md  PUBLIC_API_PLAN.md  README.md  Roadmap.md  pyproject.toml
.github/workflows/: ci.yml  docs-pages.yml  release.yml
data/: params.json
docs/: conf.py  contimod_graphene.rst  examples.md  generate_example_figures.py  index.rst  installation.md  modules.rst  usage.md
examples/: README.md  bandstructure_plots.ipynb  bernal_bands_LL.ipynb  contimod_example.ipynb  landau_level_fans.ipynb  standalone_gallery.py  standalone_quickstart.py
src/contimod_graphene/: __init__.py  basis.py  bernal.py  landau.py  models.py  params.py  rhombohedral.py  symmetry.py  utils.py
src/contimod_graphene/data/: __init__.py
tests/: test_bernal.py  test_docs_examples.py  test_landau.py  test_models.py  test_params.py  test_physics_validation.py  test_rhombohedral.py  test_symmetry.py
