[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "contimod_graphene"
description = "Standalone multilayer graphene Hamiltonians and single-particle utilities."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Tobias Wolf", email = "public@wolft.xyz"},
]
keywords = ["physics", "condensed matter", "graphene"]
license = {file = "LICENSE"}
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
urls = {Homepage = "https://github.com/skilledwolf/contimod_graphene", Repository = "https://github.com/skilledwolf/contimod_graphene", Issues = "https://github.com/skilledwolf/contimod_graphene/issues"}
dynamic = ["version"]

dependencies = [
    "numpy",
    "scipy",
    "jax"
]

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
    "black",
    "matplotlib",
    "twine",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "myst-parser",
    "matplotlib",
]

[tool.hatch.build.targets.wheel]
packages = ["src/contimod_graphene"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/contimod_graphene/_version.py"

[tool.hatch.envs.default]
installer = "uv"
dependencies = [
    "numpy",
    "scipy",
    "jax"
]
